# Unity3DFaceTtracking

./: LICENSE  README.md
OpenFaceFaceLandmarkVid/: CMakeLists.txt  FaceLandmarkVid.cpp  FaceLandmarkVid.vcxproj  README.md
OpenFaceFaceLandmarkVid/Debug/FaceLandmarkVid.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  FaceLandmarkVid.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
OpenFaceFaceLandmarkVid/x64/Release/FaceLandmarkVid.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  FaceLandmarkVid.lastbuildstate  FaceLandmarkVid.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
UnityProject/: Face.csproj  Face.sln  FaceLandmarkVid.exp  FaceLandmarkVid.lib  README.md  dlib.lib
UnityProject/Assets/: Native.cs  SetWeights.cs  Test.prefab  sc_hosni.unity
UnityProject/Assets/Materials/: FuseModelTest_Body_Diffuse.mat  FuseModelTest_Bottom_Diffuse.mat  FuseModelTest_Top_Diffuse.mat
UnityProject/ProjectSettings/: ProjectSettings.asset
UnityProject/model/: main_clm_general.txt  main_clm_wild.txt
python_script/: README.md  main.py
